--- a/solution/app/src/main/res/navigation/main_nav_graph.xml
+++ b/solution/app/src/main/res/navigation/main_nav_graph.xml
@@ -7,22 +7,25 @@
     <fragment
         android:id="@+id/mainFragment"
         android:name="com.udacity.asteroidradar.main.MainFragment"
-        android:label="fragment_main"
-        tools:layout="@layout/fragment_main" >
+        android:label="Home"
+        tools:layout="@layout/fragment_main">
+
         <action
             android:id="@+id/action_showDetail"
             app:destination="@id/detailFragment" />
+
     </fragment>
 
     <fragment
         android:id="@+id/detailFragment"
         android:name="com.udacity.asteroidradar.detail.DetailFragment"
-        android:label="fragment_detail"
+        android:label="Asteroid Details"
         tools:layout="@layout/fragment_detail">
 
         <argument
             android:name="selectedAsteroid"
-            app:argType="com.udacity.asteroidradar.Asteroid"/>
+            app:argType="com.udacity.asteroidradar.Asteroid" />
+
     </fragment>
 
 </navigation>
