--- a/solution/app/src/main/res/layout/fragment_detail.xml
+++ b/solution/app/src/main/res/layout/fragment_detail.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="asteroid"
-            type="com.udacity.asteroidradar.Asteroid" />
+            type="com.udacity.asteroidradar.data.model.Asteroid" />
 
     </data>
 
