--- a/solution/app/src/main/res/layout/fragment_main.xml
+++ b/solution/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.udacity.asteroidradar.main.MainViewModel" />
+            type="com.udacity.asteroidradar.ui.main.MainViewModel" />
 
     </data>
 
