Implement backend interfaces and show Picture of the Day

--- a/solution/app/src/main/res/layout/fragment_main.xml
+++ b/solution/app/src/main/res/layout/fragment_main.xml
@@ -29,7 +29,8 @@
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
-                app:srcCompat="@drawable/placeholder_picture_of_day" />
+                app:remoteUrl="@{viewModel.imageOfTheDayUrl}"
+                android:contentDescription="@string/image_of_the_day" />
 
             <TextView
                 android:id="@+id/textView"
