Set proper content description for Picture of the Day

--- a/solution/app/src/main/res/layout/fragment_main.xml
+++ b/solution/app/src/main/res/layout/fragment_main.xml
@@ -30,7 +30,7 @@
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
                 app:remoteUrl="@{viewModel.imageOfTheDayUrl}"
-                android:contentDescription="@string/image_of_the_day" />
+                android:contentDescription="@{viewModel.imageOfTheDayContentDescription}" />
 
             <TextView
                 android:id="@+id/textView"
