--- a/solution/app/src/main/res/layout/fragment_detail.xml
+++ b/solution/app/src/main/res/layout/fragment_detail.xml
@@ -25,6 +25,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@{asteroid.potentiallyHazardous ? @string/potentially_hazardous_asteroid_image : @string/not_hazardous_asteroid_image}"
             tools:srcCompat="@drawable/asteroid_safe" />
 
         <ScrollView
@@ -95,6 +96,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="16dp"
+                        android:contentDescription="@string/help_about_astronomical_unit"
                         app:srcCompat="@drawable/ic_help_circle" />
 
                 </LinearLayout>
