Implemented filters. Now can switch between current day only or the current week.

--- a/solution/app/src/main/res/menu/main_overflow_menu.xml
+++ b/solution/app/src/main/res/menu/main_overflow_menu.xml
@@ -2,12 +2,9 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/show_all_menu"
+        android:id="@+id/filter_show_week"
         android:title="@string/next_week_asteroids" />
     <item
-        android:id="@+id/show_rent_menu"
+        android:id="@+id/filter_show_today"
         android:title="@string/today_asteroids" />
-    <item
-        android:id="@+id/show_buy_menu"
-        android:title="@string/saved_asteroids" />
 </menu>
