--- a/solution/app/src/main/res/values/colors.xml
+++ b/solution/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#010613</color>
     <color name="colorPrimaryDark">#010613</color>
-    <color name="colorAccent">#FF8282</color>
+    <color name="colorAccent">#DC3500</color>
     <color name="app_background">#010613</color>
     <color name="default_text_color">#FFFFFF</color>
     <color name="text_grey">#D2D2D2</color>
